@@ -16,7 +16,6 @@ gnotime_SOURCES =     \
 	err.c              \
 	err-throw.c        \
 	export.c           \
-	gconf-gnomeui.c    \
 	gconf-io.c         \
 	ghtml.c            \
 	ghtml-deprecated.c \
@@ -150,5 +149,3 @@ BUILT_SOURCES=	dbus-glue.h
 dbus-glue.h : dbus.xml Makefile
 	dbus-binding-tool --mode=glib-server --output=$@ --prefix=gnotime_dbus $(srcdir)/dbus.xml
 dbus.o:	dbus-glue.h
-
-
